--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@
 local_settings.py
 *.pyc
 .idea
-blog/template_settings.py
-blog/database_settings.py
+#blog/template_settings.py
+#blog/database_settings.py
